# py-template

./: .flake8  README.md  dependabot.yml  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
