[tool.poetry]
name = "YOUR_MODULE_NAME"
version = "0.1.0"
description = ""
authors = ["YOUR NAME <YOUR@EMAIL>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

